flask/k8s/flask-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-service
  namespace: flask
spec:
  selector:
    app: flask-web-deploy
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
